<resources>
    <string name="app_name">SubScribe</string>

    <string name="HeaderDescription">Header for top row buttons</string>
    <string name="FooterDescription">Footer for Displaying Price</string>
    <string name="FooterOptionsDescription">Footer for Displaying Options</string>
    <string name="FooterCreateDescription">Footer for Displaying Create</string>
    <string name="FooterMonthlyDescription">Footer for Displaying Monthly Cost</string>

    <string name="Add">+</string>
    <string name="Login">Login</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>

    <string name="LoginDetails">View Login Details</string>
    <string name="Delete">Delete Tracker</string>
    <string name="Edit">Edit Subscription</string>


    <string name="Total">Due This Month</string>
    <string name="Price">$0.00</string>

    <string name="Home">Home</string>
    <string name="CreateSub">Create Subscription</string>
    <string name="SubCreate_Name">Name:</string>
    <string name="Freq_Name">Frequency:</string>
    <string name="Start_Name">Start Date:</string>
    <string name="Rem_Name">Reminder:</string>
    <string name="Cost_Name">Cost:</string>
    <string name="Email_Name">Email:</string>
    <string name="Password_Name">Password:</string>


    <string name="CurrentPassword">Current Password:</string>
    <string name="NewPassword">New Password:</string>

    <string name="searchHint">Search</string>
    <string name="SortPriceDesc">Sort: $ \u2B07</string>
    <string name="SortPriceAsce">Sort: $ \u2B06</string>
    <string name="NameDesc">Sort: A \u2B07</string>
    <string name="NameAsce">Sort: A \u2B07</string>
    <string name="Go">Go</string>

    <string name="ChangePassword">Change Password:</string>
    <string name="ChangeButton">Change Password</string>

</resources>