<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSubscriptionActivity">



    <RelativeLayout
    android:id="@+id/Banner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">

    <ImageView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HeaderDescription"
        app:srcCompat="@drawable/headerback_svg" />

        <Button
            android:id="@+id/HomeBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:backgroundTint="#C9CEBD"


            android:fontFamily="@font/krona"
            android:text="@string/Home"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/AddSubBtn"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"

            android:backgroundTint="#C9CEBD"
            android:fontFamily="@font/krona"


            android:text="@string/Add"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />


        <Button
            android:id="@+id/SettingsBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#C9CEBD"

            android:fontFamily="@font/krona"
            android:text="@string/Settings"
            android:textColor="@color/black" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/SubOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Banner"
        android:layout_marginBottom="85dp"

        >


        <Spinner
            android:id="@+id/NameOptions"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
        />

    </RelativeLayout>





    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/FooterLayout"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/Footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"
            android:contentDescription="@string/FooterDescription"
            app:srcCompat="@drawable/footerback_svg"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"


            android:layout_centerInParent="true"

            android:backgroundTint="#C9CEBD"
            android:fontFamily="@font/krona"
            android:text="@string/CreateSub"
            android:textColor="@color/black"

        />
    </RelativeLayout>

</RelativeLayout>