<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MONTHLYCOST"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/AMC_Banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/AMC_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/HeaderDescription"
            app:srcCompat="@drawable/headerback_svg" />


        <Button
            android:id="@+id/AMC_HomeBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"

            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"



            android:fontFamily="@font/krona"
            android:text="@string/Home"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/AMC_AddSubBtn"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button"


            android:fontFamily="@font/krona"


            android:text="@string/Add"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />


        <Button
            android:id="@+id/AMC_SettingsBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"

            android:background="@drawable/button"

            android:fontFamily="@font/krona"
            android:text="@string/Settings"
            android:textColor="@color/black" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AMC_Banner"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/AMC_viewSearch"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                app:queryHint="Search here....."
                android:background="@color/background"
                app:iconifiedByDefault="false"

                />



            <Button
                android:id="@+id/AMC_SortBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/buttonbeige" />

        </LinearLayout>

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/AMC_RecycleView"
        android:layout_width="match_parent"
        android:layout_height="477dp"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="10dp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/AMC_Footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"

            android:contentDescription="@string/HeaderDescription"
            app:srcCompat="@drawable/footerback_svg" />
        <!--PLACEHOLDER-->
        <TextView
            android:id="@+id/AMC_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBottom="@id/AMC_Footer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"

            android:fontFamily="@font/krona"
            android:text="@string/Total"
            android:textColor="@color/white"

            />

        <TextView
            android:id="@+id/AMC_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"

            android:fontFamily="@font/krona"
            android:textColor="@color/white"
            android:textSize="40sp"

            />

    </RelativeLayout>

</RelativeLayout>